--- a/style.css
+++ b/style.css
@@ -1,162 +1,221 @@
-@import "https://fonts.googleapis.com/css2?family=VT323&display=swap";
-body{
-    background-color: #646A53;
-}
-#hero {
-    height: 550px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Megrim&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
 
-#hero .outer{
-    height: 550px;
-    padding: 20px;
-    background-color: #090c08;
-}
-
-#hero .inner{
-    height: 500px;
-    background-color: #646A53;
-    background: linear-gradient(to bottom, #646A53, #373839), url("./assets/img/4728289.jpg");
-    background-blend-mode: multiply;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-/*dd1f68 COLOR PARA MARGENES*/
-#hero .inner:hover {
-    filter: contrast(80%);
-    background-blend-mode:hard-light;
-
-}
-
-#hero .title {
-    color: white;
-    font-size: 70px;
-    font-weight: lighter;
-    font-stretch:extra-expanded;
-    font-family: 'VT323';
-}
 
 #navbar {
     background:#646A53;
     height: 60px;
-    color: white;
+    padding-top: 2px;
+    padding-bottom: 2px;
 }
 
-#intro{
-    background-color: #646A53;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    margin-left: 10%;
-    margin-right: 10%;
-}
-
-#intro .title {
-    color: white;
-    font-size: 30px;
-    font-weight: 600;
-}
-
-#intro .text {
-    color: white;
-    font-size: 18px;
-    margin-bottom: 5px;
-}
-
-#intro .social-link {
-    margin-top: 15px;
-}
-#intro .social-link span {
-    font-size: 14px;
-}
-
-#gallery {
-    background-color: #C6B6B0 ;
-    height: 900px;
-    color: white;
-    font-family: 'VT323';
-    padding-right: 10%;
-    padding-left: 10%;
-}
-
-#gallery .h1 {
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-#gallery .project{
-    text-decoration: none;
-}
-/*#gallery .project:active{
-    color: yellow;
-}
-#gallery .project:link{
-    color: yellowgreen;
-}
-#gallery .project:hover{
-    color: lightyellow;
-}
-#gallery .project:visited{
-    color: black;
-}*/
-
-
-#gallery {
-    margin-left: 30px;
-    margin-right: 30px;
-}
-
-#gallery h1 {
-    margin-top: 20px;
-    margin-bottom: 0px;
-}
-/*quita el subrayado del link*/
-#gallery .project {
-    text-decoration: none;
-}
-/*si ya lo visitaste se muestra de ese color*/
-#gallery .project:visited {
-    color: black;
-}
-/*si está activo el enlace lo colorea*/
-#gallery .project:active {
-    color: black;
-}
-/*hover, aquí se pueden agregar las animaciones de animate.css*/
-#gallery .project:hover {
-    box-shadow:1px 1px 20px black;
-    padding-top: 1px;
-}
-
-#gallery .project img {
+#navbar .space {
+    width: 10%;
     height: auto;
-    width: 100%;
-    margin-top: 0px;
+}
+
+#navbar .logo {
+    background-image: url("");
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+#navbar .logo:hover {
+    background-image: url("");
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+body {
+    font-family: 'Megrim', cursive;
+    background-color: #3f4238;
+    color: white;
+}
+
+/* Hero */
+
+#hero {
+    height: 500px;
+}
+
+#hero .outer {
+    height: 500px;
+    padding: 20px;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+#hero .inner {
+    height: 500px;
+    background-color: #373839;
+    background: linear-gradient(to bottom, rgb(220, 221, 222), #373839), url("./assets/img/4728289.jpg");
+    background-blend-mode: multiply;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#gallery .project .img-1 {
-    height: auto;
-    width: 100%;
-    margin-top: 0px;
-    align-items: center;
+#hero .inner:hover {
+    background: linear-gradient(to bottom, #646A53, antiquewhite),url("./assets/img/4728289.jpg");
 }
 
-#gallery .project .title {
-    margin-top: 20px;
+#hero .title {
+    color: white;
+    font-size: 70px;
+}
+
+/* Intro */
+
+#intro {
+    margin-top: 100px;
+    margin-bottom: 50px;
+    padding-left: 13%;
+    padding-right: 13%;
+    background-color: #f0efeb;
+    color: #646A53;
+}
+
+#intro .title {
+    font-size: 30px;
+    font-weight: 600;
+    font-family: 'Playfair Display', serif;
+}
+
+#intro .text {
+    font-size: 16px;
+    margin-bottom: 5px;
+    font-family: 'Playfair Display', serif;
+}
+
+#intro .social-link {
+    margin-top: 15px;
+}
+
+#intro .social-link span {
     font-size: 14px;
 }
 
-#gallery .project .detail {
-    margin-top: 5px;
-    margin-bottom: 40px;
-    font-size: 12px;
+#gallery {
+    margin-top: 100px;
+    padding-left: 13%;
+    padding-right: 13%;
 }
+
+#gallery h1 {
+    margin-bottom: 40px;
+}
+
+#gallery .project {
+    text-decoration: none;
+    color: black;
+    font-family: 'Playfair Display', serif;
+    background-color: #a5a58d;
+}
+
+#gallery .project:hover {
+    box-shadow: 1px 1px 5px #00000055;
+    animation: bounce;
+    animation-duration: .5s;
+}
+
+/*
+#gallery .project:active {
+  color: black;
+}
+
+#gallery .project:link {
+  color: black;
+}
+
+#gallery .project:hover {
+  color: black;
+}
+
+#gallery .project:visited {
+  color: black;
+}
+*/
+
+#gallery .project .img {
+    height: 400px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+#gallery .project .img-1 {
+    background-image: url("#");
+}
+
+#gallery .project .img-2 {
+    background-image: url(./assets/img/NETFLIX.gif);
+    background-repeat: no-repeat;
+
+}
+
+#gallery .project .img-3 {
+    background-image: url(./assets/img/JCR.gif);
+    background-repeat: no-repeat;
+}
+
+#gallery .project .title {
+    padding: 0;
+    margin-top: 30px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#gallery .project .detail {
+    padding: 0;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    font-size: 16px;
+}
+
+/* Footer */
 
 #footer {
-    background:#646A53;
-    height: 200px;
+    margin-top: 100px;
+    padding-top: 90px;
+    padding-bottom: 90px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    background-color: #646A53;
     color: white;
-    font-family: 'VT323';
+    letter-spacing: .5px;
 }
 
+#footer .logo {
+    padding-left: 5%;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+#footer .data {
+    padding-left: 5%;
+    font-size: 12px;
+    font-family: 'Playfair Display', serif;
+}
+
+#footer .data a {
+    display: block;
+    margin-bottom: 5px;
+    color: white;
+    text-decoration: none;
+}
+
+#footer .social {
+    display: flex;
+    justify-content: center;
+}
+
+#footer .social a {
+    margin-left: 10px;
+    margin-right: 10px;
+    color: white;
+    text-decoration: none;
+}
