--- a/css/style.css
+++ b/css/style.css
@@ -413,7 +413,7 @@ small {
 }
 
 #gallery .project .img-1 {
-    background-image: url("#");
+    background-image: url("../assets/img/galleryimg.png");
 }
 
 #gallery .project .img-2 {
