--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@
         position:fixed;
         width: 100%;
         height: 100vh;
-        /*background-color:  rgba(12, 9, 29, 0.8);*/
+        background-color:  rgba(12, 9, 29, 0.8);
         transition: background-color .6s;
 
     }
