--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,33 @@
 
 
 
+.card__paragraph {
+	transform: translateY(20px);
+	opacity: 0;
+	transition: opacity .15s .1s ease, transform .3s .2s ease;
+	color: #f3c969;
+	text-align: center;
+	font-weight: bolder;
+	/*align-self: end;*/
+
+}
+
+.card:hover .card__paragraph {
+	transform: translateY(0px);
+	opacity: 1;
+	/*align-self: end;*/
+}
+
+@media (max-width: 550px) {
+	body {
+		flex-direction: column;
+		padding: 4em;
+	}
+	.card--right {
+		margin-top: 3em;
+	}
+}
+
 .projects {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
@@ -34,15 +61,7 @@
 	text-decoration: none;
 }
 
-.card h3{
-	z-index: 1;
-	text-align: end;
-	font-size: 30px;
-	text-decoration: none;
-	font-weight: bolder;
-	color: white;
-	pointer-events: none;
-}
+
 
 .card img {
 	position: absolute;
